// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomNav should apply the correct styling based on props 1`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--shifting md-bottom-nav--shifting-inactive md-text"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
</a>
`;

exports[`BottomNav should apply the correct styling based on props 2`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--shifting md-bottom-nav--shifting-active md-text--theme-primary"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-bottom-nav-label"
  >
    Label
  </div>
</a>
`;

exports[`BottomNav should apply the correct styling based on props 3`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--shifting md-bottom-nav--shifting-active"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-bottom-nav-label"
  >
    Label
  </div>
</a>
`;

exports[`BottomNav should apply the correct styling based on props 4`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--shifting md-bottom-nav--shifting-inactive"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
</a>
`;

exports[`BottomNav should apply the correct styling based on props 5`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--fixed md-text"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-bottom-nav-label"
  >
    Label
  </div>
</a>
`;

exports[`BottomNav should apply the correct styling based on props 6`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--fixed md-text--theme-primary"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-bottom-nav-label"
  >
    Label
  </div>
</a>
`;

exports[`BottomNav should be able to render an SVGIcon or a FontIcon 1`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--shifting md-bottom-nav--shifting-active md-text--theme-primary"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <i
    class="md-icon material-icons md-text--inherit"
  >
    woop
  </i>
  <div
    class="md-bottom-nav-label"
    style="overflow: hidden;"
  >
    Woop
  </div>
</a>
`;

exports[`BottomNav should be able to render an SVGIcon or a FontIcon 2`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--shifting md-bottom-nav--shifting-active md-text--theme-primary"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="fjdkslfs"
    />
  </svg>
  <div
    class="md-bottom-nav-label"
    style="overflow: hidden;"
  >
    Woop
  </div>
</a>
`;

exports[`BottomNav should be able to render an SVGIcon or a FontIcon 3`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--shifting md-bottom-nav--shifting-active md-text--theme-primary"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <svg
    class="md-icon md-text--inherit"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#some-url"
    />
  </svg>
  <div
    class="md-bottom-nav-label"
    style="overflow: hidden;"
  >
    Woop
  </div>
</a>
`;

exports[`BottomNav should be able to render elements as the label prop 1`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--shifting md-bottom-nav--shifting-active md-text--theme-primary"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <span
    class="md-bottom-nav-label"
    style="overflow: hidden;"
  >
    Label
  </span>
</a>
`;

exports[`BottomNav should be able to render elements as the label prop 2`] = `
<a
  aria-pressed="false"
  class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--shifting md-bottom-nav--shifting-active md-text--theme-primary"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-bottom-nav-label"
  >
    <span>
      Hello
    </span>
    World
  </div>
</a>
`;
